[package]
name = "DEngine"
version = "0.0.16"
edition = "2021"
authors = ["Delfi"]
homepage = "https://github.com/Delfi1/DEngine"

[profile.dev]
opt-level = 3

[dependencies]
vulkano = "*"
vulkano-shaders = "*"
vulkano-util = "*"

cgmath = { version = "*", features = ["serde"] }
winit = "0.28.7"

serde = {version = "*", features = ["std", "derive"]}